--- a/mutual_influence_analysis_published.ipynb
+++ b/mutual_influence_analysis_published.ipynb
@@ -2076,7 +2076,7 @@
         "plt.tight_layout()\n",
         "plt.savefig(os.path.join(OUT_DIR, \"heatmap_tau_k.png\"), dpi=200)\n",
         "\n",
-        "print(\"\\n✅ All figures saved in:\", OUT_DIR)\n"
+        "print(\"\\n All figures saved in:\", OUT_DIR)\n"
       ]
     },
     {
